# contested-logistics-optimizer

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: textbook_maxflow.json  theater_sample.json
src/: mincostflow.py  model.py  routing.py  scenario.py  solver.py  throughput.py
src/clopt/: __init__.py  api.py  cli.py  interdiction.py  maxflow.py  model.py  scenario.py  solver.py  throughput.py
tests/: test_maxflow_interdiction.py  test_mincostflow.py  test_routing.py  test_solver.py
