[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clopt"
version = "0.1.0"
description = "Contested-Logistics Routing Optimizer: risk-weighted min-cost-flow resupply planning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brett G" }]
keywords = ["operations-research", "min-cost-flow", "logistics", "routing", "optimization"]

# The algorithmic core and CLI depend only on the standard library.
dependencies = []

[project.optional-dependencies]
# Only needed for the REST API surface.
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2"]
# Developer / test tooling.
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
clopt = "clopt.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
